# 80186PC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
80186PC/: CMakeLists.txt  main.cpp
80186PC/ATA/: ATADemux.cpp  ATADevice.cpp  ATAHardDisk.cpp  IATADevice.cpp
80186PC/Hardware/: AboveBoard.cpp  BusMouse.cpp  CPUEmulation.cpp  CPUEmulationFactory.cpp  HerculesVideo.cpp  Machine.cpp  NMIControl.cpp  PIC.cpp  PIT.cpp  PPI.cpp  PPIConsumer.cpp  RTC.cpp  XTIDE.cpp  XTKeyboard.cpp
80186PC/HyperV/: HypervisorCPUEmulation.cpp  HypervisorEmulator.cpp  HypervisorPartition.cpp  IHypervisorEmulatorCallbacks.cpp
80186PC/Infrastructure/: AddressRangeRegistration.cpp  AddressSpaceDispatcher.cpp  DummyAddressRangeHandler.cpp  IAddressRangeHandler.cpp  InterruptController.cpp  InterruptLine.cpp  MappedAddressRange.cpp
80186PC/Resources/: 80186PC.rc
80186PC/UI/: Keyboard.cpp  Mouse.cpp  SDLUI.cpp  VideoAdapter.cpp
80186PC/Utils/: WindowsObjectTypes.cpp  WindowsResources.cpp
80186PC/X86Emu/: X86EmuCPUEmulation.cpp
80186PC/include/ATA/: ATADemux.h  ATADevice.h  ATAHardDisk.h  ATATypes.h  IATADevice.h
80186PC/include/Hardware/: AboveBoard.h  BusMouse.h  CPUEmulation.h  CPUEmulationFactory.h  HerculesVideo.h  Machine.h  NMIControl.h  PIC.h  PIT.h  PPI.h  PPIConsumer.h  RTC.h  XTIDE.h  XTKeyboard.h
80186PC/include/HyperV/: HypervisorCPUEmulation.h  HypervisorEmulator.h  HypervisorPartition.h  IHypervisorEmulatorCallbacks.h
80186PC/include/Infrastructure/: AddressRange.h  AddressRangeRegistration.h  AddressSpaceDispatcher.h  DummyAddressRangeHandler.h  IAddressRangeHandler.h  InterruptController.h  InterruptLine.h  MappedAddressRange.h
80186PC/include/UI/: Keyboard.h  Mouse.h  SDLUI.h  VideoAdapter.h
80186PC/include/Utils/: AccessSizeUtils.h  WindowsObjectTypes.h  WindowsResources.h
80186PC/include/X86Emu/: X86EmuCPUEmulation.h
